// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostEditor mapDispatchToProps calls save correctly 1`] = `
Object {
  "fetchPost": [Function],
  "pollingFindOrCreateLocation": [Function],
  "save": [Function],
  "upload": [Function],
}
`;

exports[`PostEditor mapDispatchToProps calls save correctly 2`] = `
Array [
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($id: ID
        $type: String
        $title: String
        $details: String
        $communityIds: [String]
        $startTime: String
        $endTime: String
        $locationId: ID
        $imageUrls: [String]
        $fileUrls: [String]
        $topicNames: [String]
        $memberIds: [ID]        
      ) {
        updatePost(id: $id, data: {
          type: $type
          title: $title
          details: $details
          communityIds: $communityIds
          startTime: $startTime
          endTime: $endTime
          locationId: $locationId
          imageUrls: $imageUrls
          fileUrls: $fileUrls
          topicNames: $topicNames
          memberIds: $memberIds
        }) {
          
  id
  title
  details
  type
  location
  locationObject {
    id
    addressNumber
    addressStreet
    bbox {
      lat
      lng
    }
    center {
      lat
      lng
    }
    city
    country
    fullText
    locality
    neighborhood
    region
  }
  announcement
  creator {
    id
    name
    avatarUrl
    tagline
  }
  createdAt
  updatedAt
  isPublic
  fulfilledAt
  startTime
  endTime
  myEventResponse
  commenters(first: 3) {
    id
    name
    avatarUrl
  }
  commentersTotal
  commentsTotal
  comments(first: 10, order: \\"desc\\") {
    items {
      id
      text
      creator {
        id
        name
        avatarUrl
      }
      createdAt
    }
    total
    hasMore
  }
  linkPreview {
    title
    url
    imageUrl
  }
  votesTotal
  myVote
  communities {
    id
    name
    slug
  }
  attachments {
    id
    position
    type
    url
  }
  postMemberships {
    id
    pinned
    community {
      id
    }
  }
  topics {
    id
    name
    postsTotal
    followersTotal
  }
  members {
    items {
      id
      name
      avatarUrl
    }
    total
  }
        }
      }",
        "variables": Object {
          "communityIds": Array [
            1,
          ],
          "details": "",
          "endTime": undefined,
          "fileUrls": Array [],
          "id": 1,
          "imageUrls": Array [],
          "locationId": undefined,
          "memberIds": Array [],
          "startTime": undefined,
          "title": "a title",
          "topicNames": Array [],
          "type": undefined,
        },
      },
      "meta": Object {
        "analytics": Object {
          "detailsLength": 0,
          "eventName": "Post Updated",
        },
        "extractModel": Object {
          "append": false,
          "getRoot": [Function],
          "modelName": "Post",
        },
      },
      "type": "PostEditor/UPDATE_POST",
    },
  ],
]
`;

exports[`PostEditor mapDispatchToProps maps the action generators 1`] = `
Object {
  "fetchPost": [Function],
  "pollingFindOrCreateLocation": [Function],
  "save": [Function],
  "upload": [Function],
}
`;

exports[`PostEditor mapDispatchToProps maps the action generators 2`] = `
Array [
  Array [
    Object {
      "graphql": Object {
        "query": "query ($id: ID) {
        post(id: $id) {
          
  id
  title
  details
  type
  location
  locationObject {
    id
    addressNumber
    addressStreet
    bbox {
      lat
      lng
    }
    center {
      lat
      lng
    }
    city
    country
    fullText
    locality
    neighborhood
    region
  }
  announcement
  creator {
    id
    name
    avatarUrl
    tagline
  }
  createdAt
  updatedAt
  isPublic
  fulfilledAt
  startTime
  endTime
  myEventResponse
  commenters(first: 3) {
    id
    name
    avatarUrl
  }
  commentersTotal
  commentsTotal
  comments(first: 10, order: \\"desc\\") {
    items {
      id
      text
      creator {
        id
        name
        avatarUrl
      }
      createdAt
    }
    total
    hasMore
  }
  linkPreview {
    title
    url
    imageUrl
  }
  votesTotal
  myVote
  communities {
    id
    name
    slug
  }
  attachments {
    id
    position
    type
    url
  }
  postMemberships {
    id
    pinned
    community {
      id
    }
  }
  topics {
    id
    name
    postsTotal
    followersTotal
  }
  members {
    items {
      id
      name
      avatarUrl
    }
    total
  }
        }
      }",
        "variables": Object {
          "id": 1,
        },
      },
      "meta": Object {
        "afterInteractions": true,
        "extractModel": "Post",
        "extractQueryResults": Object {
          "getItems": [Function],
          "getType": [Function],
        },
      },
      "type": "FETCH_POST",
    },
  ],
]
`;

exports[`PostEditor mapStateToProps maps 1`] = `
Object {
  "canModerate": true,
  "communityOptions": Array [
    Object {
      "id": "7",
    },
  ],
  "fileUrls": Array [],
  "imageUrls": Array [
    "bar.png",
    "foo.png",
  ],
  "isNewPost": true,
  "isProject": false,
  "pendingDetailsText": false,
  "post": Object {
    "commenters": Array [],
    "communities": Array [
      Object {
        "id": "7",
      },
      Object {
        "id": "8",
      },
    ],
    "creator": Object {
      "id": "10",
    },
    "fileAttachments": Array [],
    "fileUrls": Array [],
    "id": "1",
    "imageUrls": Array [
      "bar.png",
      "foo.png",
    ],
    "linkPreview": undefined,
    "members": Array [],
    "pinned": undefined,
    "topics": Array [],
  },
}
`;
